# qwen15b_cpu_sft_ollama

./: README 2.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
configs/: cpt_lora_qwen15b_cpu_cloudtext.yaml  sft_lora_qwen15b_cpu_cloudqa.yaml
docker/: Dockerfile.ui
ollama/: Modelfile.template
scripts/: docker_create_model.sh  export_gguf.sh  merge_adapter.py  monitor_train.sh  quantize_gguf.sh  run_train_cpt_then_sft.sh
src/qwen15b_cpu_sft/: __init__.py  config.py  data.py  logging_utils.py  modeling.py  train.py
ui/: streamlit_app.py
